--- a/package.json
+++ b/package.json
@@ -21,11 +21,16 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^15.0.1",
+    "@types/validator": "^13.6.3",
     "typescript": "^4.2.4"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "inversify": "^5.1.1",
+    "nanoid": "^3.1.23",
+    "reflect-metadata": "^0.1.13",
+    "validator": "^13.6.0"
   }
 }
