--- a/package.json
+++ b/package.json
@@ -16,12 +16,17 @@
     "docker:up": "yarn docker:start",
     "docker:stop": "docker-compose stop",
     "docker:rm": "docker-compose rm -fs",
-    "docker:restart": "yarn docker:rm && yarn docker:start"
+    "docker:restart": "yarn docker:rm && yarn docker:start",
+    "test": "jest ",
+    "test:coverage": "jest --coverage --verbose "
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^26.0.24",
     "@types/node": "^15.0.1",
     "@types/validator": "^13.6.3",
+    "jest": "^27.0.6",
+    "ts-jest": "^27.0.4",
     "typescript": "^4.2.4"
   },
   "dependencies": {
